# nodesentry

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: nodesentry.service  nodesentry.timer
docs/: DEFINITION_OF_DONE.md  GOAL.md  THREAT_MODEL.md
example-bitcoin-data/: bitcoin.conf
nodesentry/: __init__.py  __main__.py  cli.py  models.py  report.py  rpc.py
nodesentry/checks/: __init__.py  chain.py  config.py  disk.py  peers.py
tests/: test_chain_checks.py  test_cli.py  test_config_audit.py  test_disk_check.py  test_models.py  test_peer_checks.py  test_report.py  test_rpc.py  test_rpc_url_policy.py  test_security_regressions.py
